solved image squishing issue

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -59,6 +59,8 @@ td {
 }
 
 .thumbnail {
+    object-fit: cover;
+    object-position: 100% 0;
     width: 325px;
     height: 225px
 }
